wk_taa_taaqa/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>New_Account_Segment__c</fullName>
        <label>New Account Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting Firms</fullName>
                </value>
                <value>
                    <fullName>Banks and Financial Institutions</fullName>
                </value>
                <value>
                    <fullName>Consultants</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Financial and Estate Planners</fullName>
                </value>
                <value>
                    <fullName>General Corporate</fullName>
                </value>
                <value>
                    <fullName>Hospital and Payers</fullName>
                </value>
                <value>
                    <fullName>Insurance Companies</fullName>
                </value>
                <value>
                    <fullName>Legal Professionals</fullName>
                </value>
                <value>
                    <fullName>Retail Tax Preparer</fullName>
                </value>
                <value>
                    <fullName>Schools and Libraries</fullName>
                </value>
                <value>
                    <fullName>State and Local Government</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt and Membership Organizations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Account_SubSegment__c</fullName>
        <label>New Account SubSegment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>New_Account_Segment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sole Proprietor</fullName>
                </value>
                <value>
                    <fullName>2-4 Total Employees</fullName>
                </value>
                <value>
                    <fullName>5-9 Total Employees</fullName>
                </value>
                <value>
                    <fullName>10-19 Total Employees</fullName>
                </value>
                <value>
                    <fullName>20-49 Total Employees</fullName>
                </value>
                <value>
                    <fullName>50-99 Total Employees</fullName>
                </value>
                <value>
                    <fullName>100+ Total Employees</fullName>
                </value>
                <value>
                    <fullName>Top 100 Firms</fullName>
                </value>
                <value>
                    <fullName>2-Year School</fullName>
                </value>
                <value>
                    <fullName>Global Enterprise</fullName>
                </value>
                <value>
                    <fullName>Large Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Enterprise</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Dept of Agriculture</fullName>
                </value>
                <value>
                    <fullName>Dept of Commerce</fullName>
                </value>
                <value>
                    <fullName>Dept of Defense</fullName>
                </value>
                <value>
                    <fullName>Dept of Energy</fullName>
                </value>
                <value>
                    <fullName>Dept of Health and Human Services</fullName>
                </value>
                <value>
                    <fullName>Dept of Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Dept of Housing and Urban Development</fullName>
                </value>
                <value>
                    <fullName>Dept of Interior</fullName>
                </value>
                <value>
                    <fullName>Dept of Justice</fullName>
                </value>
                <value>
                    <fullName>Dept of Labor</fullName>
                </value>
                <value>
                    <fullName>Dept of State</fullName>
                </value>
                <value>
                    <fullName>Dept of Treasury (not IRS)</fullName>
                </value>
                <value>
                    <fullName>Dept of Vet Affairs</fullName>
                </value>
                <value>
                    <fullName>EEOC</fullName>
                </value>
                <value>
                    <fullName>Exec Branch (White House)</fullName>
                </value>
                <value>
                    <fullName>FCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Days_Since_Opened__c</fullName>
        <formula>TODAY () - DateValue( CreatedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days Since Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Amount__c</fullName>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_Reason__c</fullName>
        <label>Order Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Holder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Closed_Reason__c</fullName>
        <label>Other Closed Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Competitor__c</fullName>
        <label>Other Competitor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFX_Account_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>PFX Account Number</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_X_Reference__c.Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account_X_Reference__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This has been created as a duplicate to Contact Name field for the opportunity quick create process. Contact Name field is a standard field for Cases that cannot be removed from the page layout. For this reason, it is hidden from users as we will not be able to hide it on any page layout.</description>
        <label>Point of Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Quick Create Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Account_Segment__c</fullName>
        <label>Previous Account Segment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Account_Sub_Segment__c</fullName>
        <label>Previous Account Sub Segment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>Primary_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cancellation Cases</relationshipLabel>
        <relationshipName>Cancellation_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prioritization_Status__c</fullName>
        <label>Prioritization Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New - Not Reviewed</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Reviewed - Prioritized</fullName>
                </value>
                <value>
                    <fullName>Reviewed - Backlog</fullName>
                </value>
                <value>
                    <fullName>Reviewed - Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Corporate Market R&amp;L</fullName>
                </value>
                <value>
                    <fullName>Corporate Software</fullName>
                </value>
                <value>
                    <fullName>Med/Large Software</fullName>
                </value>
                <value>
                    <fullName>Professional Market R&amp;L</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Professional Market Software</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Research &amp; Learning</fullName>
                </value>
                <value>
                    <fullName>Small Firm Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Category__c</fullName>
        <label>Product Sub-Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Product_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A&amp;A Research</fullName>
                </value>
                <value>
                    <fullName>AnswerConnect</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>Audit Accelerator</fullName>
                </value>
                <value>
                    <fullName>Autoflow</fullName>
                </value>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess</fullName>
                </value>
                <value>
                    <fullName>Certificate Programs</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Core Library - Corporate Tax</fullName>
                </value>
                <value>
                    <fullName>Core Library - CPA Professional</fullName>
                </value>
                <value>
                    <fullName>Corp Tax</fullName>
                </value>
                <value>
                    <fullName>Corp Workflow</fullName>
                </value>
                <value>
                    <fullName>Database/Lookups/RADAR</fullName>
                </value>
                <value>
                    <fullName>Federal Add On</fullName>
                </value>
                <value>
                    <fullName>Federal Tax</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>iFirm</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>International Tax</fullName>
                </value>
                <value>
                    <fullName>Learning</fullName>
                </value>
                <value>
                    <fullName>Learning Center</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Learning Tax</fullName>
                </value>
                <value>
                    <fullName>POS Portal</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>ProSystem</fullName>
                </value>
                <value>
                    <fullName>Refunds Today</fullName>
                </value>
                <value>
                    <fullName>Sales Tax Calculation</fullName>
                </value>
                <value>
                    <fullName>Sales Tax Compliance</fullName>
                </value>
                <value>
                    <fullName>Sales Tax Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Segment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Active Data</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>AnswerConnect</fullName>
                </value>
                <value>
                    <fullName>ARM</fullName>
                </value>
                <value>
                    <fullName>ATX</fullName>
                </value>
                <value>
                    <fullName>Autoflow</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Axcess</fullName>
                </value>
                <value>
                    <fullName>Axcess Document</fullName>
                </value>
                <value>
                    <fullName>Axcess Practice</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Axcess Tax</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Ax - Doc</fullName>
                </value>
                <value>
                    <fullName>Ax - Other</fullName>
                </value>
                <value>
                    <fullName>Ax - Portal</fullName>
                </value>
                <value>
                    <fullName>Ax - Practice</fullName>
                </value>
                <value>
                    <fullName>Ax Suite</fullName>
                </value>
                <value>
                    <fullName>Ax - Tax</fullName>
                </value>
                <value>
                    <fullName>Ax - WS</fullName>
                </value>
                <value>
                    <fullName>CASP</fullName>
                </value>
                <value>
                    <fullName>CCH Audit Accelerator</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Document</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Portal</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Practice</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Tax</fullName>
                </value>
                <value>
                    <fullName>CCH Axcess Workstream</fullName>
                </value>
                <value>
                    <fullName>CCH Data Axcess</fullName>
                </value>
                <value>
                    <fullName>CCH ProSystem fx ActiveData</fullName>
                </value>
                <value>
                    <fullName>CCH ProSystem fx Autoflow</fullName>
                </value>
                <value>
                    <fullName>CCH ProSystem fx Document</fullName>
                </value>
                <value>
                    <fullName>CCH ProSystem fx Engagement</fullName>
                </value>
                <value>
                    <fullName>CCH ProSystem fx Fixed Assets</fullName>
                </value>
                <value>
                    <fullName>CCH ProSystem fx Knowledge Coach</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_Client_Services__c</fullName>
        <label>Topics</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARM/Audit</fullName>
                </value>
                <value>
                    <fullName>Audit and Accounting</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Competition</fullName>
                </value>
                <value>
                    <fullName>Deal Coaching</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Help with Sales Process</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Order Validation and Scheduling</fullName>
                </value>
                <value>
                    <fullName>Pilot Candidate</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Product Functionality</fullName>
                </value>
                <value>
                    <fullName>Professional Service Calculator</fullName>
                </value>
                <value>
                    <fullName>ProServ Conversions</fullName>
                </value>
                <value>
                    <fullName>Request for assistance on a sales call</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Service Recommendations</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Statements of Work</fullName>
                </value>
                <value>
                    <fullName>System Requirements</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Tax Conversions</fullName>
                </value>
                <value>
                    <fullName>Technical Requirements</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Workflow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Sales_Support_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Details__c</fullName>
        <inlineHelpText>Provide details to support this request.</inlineHelpText>
        <label>Request Details</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requesting_Organization__c</fullName>
        <label>Requesting Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Compensation</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service Excellence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor_Division__c</fullName>
        <formula>TEXT(Requestor__r.Division__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_EmailOLD__c</fullName>
        <formula>Requestor__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Email.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requestor_High_Level_Division__c</fullName>
        <formula>TEXT( Requestor__r.High_Level_Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor High Level Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Phone__c</fullName>
        <formula>Requestor__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolved_By__c</fullName>
        <label>Dept Resolved By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enablement Team</fullName>
                </value>
                <value>
                    <fullName>Learning Team</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>T&amp;C</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
                <value>
                    <fullName>Renewal Management</fullName>
                </value>
                <value>
                    <fullName>DSM</fullName>
                </value>
                <value>
                    <fullName>VP &amp; Director</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Proserv</fullName>
                </value>
                <value>
                    <fullName>T&amp;C-IC</fullName>
                </value>
                <value>
                    <fullName>ASR</fullName>
                </value>
                <value>
                    <fullName>Customer Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <label>Resolved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data </fullName>
                </value>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>System </fullName>
                </value>
                <value>
                    <fullName>User </fullName>
                </value>
                <value>
                    <fullName>External Issue</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Information</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Process Failure</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Resource Issue</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>System Issue</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Account__c</fullName>
        <label>SFDC Account #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales411_Queue_Owner__c</fullName>
        <formula>OwnerId = &quot;00G3100000461nz&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales411 Queue Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Ops Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accounting Firms</fullName>
                </value>
                <value>
                    <fullName>Banks and Financial Institutions</fullName>
                </value>
                <value>
                    <fullName>Consultants</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Financial and Estate Planners</fullName>
                </value>
                <value>
                    <fullName>General Corporate</fullName>
                </value>
                <value>
                    <fullName>Hospital and Payers</fullName>
                </value>
                <value>
                    <fullName>Insurance Companies</fullName>
                </value>
                <value>
                    <fullName>Legal Professionals</fullName>
                </value>
                <value>
                    <fullName>Retail Tax Preparers</fullName>
                </value>
                <value>
                    <fullName>Schools and Libraries</fullName>
                </value>
                <value>
                    <fullName>State and Local Government</fullName>
                </value>
                <value>
                    <fullName>Tax Exempt and Membership Organizations</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solution_Detail__c</fullName>
        <label>Solution Detail</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Solution_Needs_Accuracy_Review__c</fullName>
        <label>Solution Needs Accuracy Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Every Quarter</fullName>
                </value>
                <value>
                    <fullName>Every Six Months</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1. Gain Access</fullName>
                </value>
                <value>
                    <fullName>2. Recognize Need</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>3. Execute Demo</fullName>
                </value>
                <value>
                    <fullName>4. Align</fullName>
                </value>
                <value>
                    <fullName>5. Time to Buy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SteelBrick_Opportunity_URL__c</fullName>
        <formula>IF( CPQ_System__c = &quot;Steelbrick&quot; &amp;&amp; NOT(ISblank(Opportunity__r.SFS_Opportunity_ID__c)),
    HYPERLINK(&quot;https://wksfs.my.salesforce.com/&quot;+ Opportunity__r.SFS_Opportunity_ID__c , 
              &quot;https://wksfs.my.salesforce.com/&quot;+ Opportunity__r.SFS_Opportunity_ID__c),
    &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SteelBrick Opportunity URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>